2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Modules/AppKit/AppKitConstants.list:
	* Modules/AppKit/AppKitConstants.m:
	* Modules/AppKit/AppKitEvents.list:
	* Modules/AppKit/AppKitEvents.m:
	* Modules/AppKit/AppKitExceptions.m:
	* Modules/AppKit/AppKitNotifications.m:
	* Modules/AppKit/header.m:
	* Modules/Foundation/FoundationConstants.list:
	* Modules/Foundation/FoundationConstants.m:
	* Modules/Foundation/header.m:
	* Modules/GDL2/header.m:
	* Modules/SQLClient/SQLClientConstants.m:
	* Modules/SQLClient/header.m:
	* Modules/WebServices/WebServicesConstants.m:
	* Modules/WebServices/header.m:
	int->NSInteger transition

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSInvocation+additions.h:
	* Frameworks/StepTalk/NSInvocation+additions.m:
	* Frameworks/StepTalk/NSNumber+additions.h:
	* Frameworks/StepTalk/NSNumber+additions.m:
	* Frameworks/StepTalk/STActor.m:
	* Frameworks/StepTalk/STEnvironmentDescription.h:
	* Frameworks/StepTalk/STEnvironmentDescription.m:
	* Frameworks/StepTalk/STLanguageManager.m:
	* Frameworks/StepTalk/STObjCRuntime.m:
	* Frameworks/StepTalk/STScriptObject.m:
	* Frameworks/StepTalk/STStructure.h:
	* Frameworks/StepTalk/STStructure.m:
	int->NSInteger transition

2013-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STActor.m (-setValue:forKey:): Fix bug where
	instance variables of an actor got lost when set to nil.

2013-04-04  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/NSObject+additions.h (-yourself):
	* Frameworks/StepTalk/NSObject+additions.m (-yourself): Add
	standard Smalltalk method, which is convenient in cascades.

2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/STEnvironmentProcess.m (-initWithDescriptionName:):
	Check the result of the super class initializer and assign it to
	self.

2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Frameworks/StepTalk/STActor.m (-init, -initWithEnvironment:,
		-initWithCoder:):